<resources>
    <string name="app_name">SmartAlert</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="not_yet_registered_signup_now"><u>Not yet registered? SignUp Now</u></string>
    <string name="already_have_an_account_login_now"><u>Already have an account? Login Now</u></string>

    <string name="report_danger">Report Danger</string>
    <string name="danger_name">Danger Name</string>
    <string name="report">Report</string>
    <string name="comment">Comment</string>
    <string name="settings">Settings</string>
    <string name="save_changes">Save Changes</string>

    <string name="flood">Flood</string>
    <string name="fire">Fire</string>
    <string name="earthquake">Earthquake</string>
    <string name="hurricane">Hurricane</string>
    <string name="snowstorm">Snowstorm</string>
    <string name="other">Other</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_uploaded_successfully">Image uploaded successfully!</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="successful_report">Successful Report!</string>
    <string name="logout">Logout</string>
    <string name="review_alerts">Review Alerts</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="more">More</string>
    <string name="fewer">Fewer</string>
    <string name="statistics">Statistics</string>
    <string name="longitude">longitude:</string>
    <string name="latitude">latitude:</string>
    <string name="time">time:</string>
    <string name="instructions">Instructions</string>
    <string name="ok" translatable="false">OK</string>
    <string name="total_alerts">Total alerts:</string>

    <string name="danger_info">Stay tuned for announcements and adhere to guidance provided by officials. Assemble a basic emergency supply kit. Familiarize yourself with evacuation paths and meeting spots. Follow directives for evacuation if mandated, utilizing specified routes and shelters.</string>
</resources>