<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:backgroundTint="@color/accent_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:drawableStart="@drawable/ic_baseline_email_primary"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/light_1"
                android:textColorHint="@color/light_2"
                android:backgroundTint="@color/background"
                app:backgroundTint="@color/background"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_baseline_person_primary"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/light_1"
                android:textColorHint="@color/light_2"
                android:backgroundTint="@color/background"
                app:backgroundTint="@color/background"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_baseline_lock_primary"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/light_1"
                android:textColorHint="@color/light_2"
                android:backgroundTint="@color/background"
                app:backgroundTint="@color/background"
                android:textColorHighlight="@color/cardview_dark_background" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/primary"
                android:onClick="onButtonClick"
                android:text="@string/login"
                android:textColor="@color/background"
                android:textSize="18sp"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:onClick="onChangeLoginSignUp"
        android:padding="8dp"
        android:text="@string/not_yet_registered_signup_now"
        android:textAlignment="center"
        android:textColor="@color/light_1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>