<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:backgroundTint="@color/accent_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/reportDangerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_danger"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="36sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="18dp"
                android:backgroundTint="@color/primary">

                <Spinner
                    android:id="@+id/typeOfDangerSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:paddingStart="10dp"/>

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/dangerNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="8dp"
                android:hint="@string/danger_name"
                android:padding="8dp"
                android:textColor="@color/light_1"
                android:textColorHint="@color/light_2"
                android:backgroundTint="@color/background"
                app:backgroundTint="@color/background"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/commentEditText"
                android:inputType="textMultiLine"
                android:lines="4"
                android:minLines="1"
                android:gravity="top|start"
                android:maxLines="10"
                android:layout_height="100dp"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:scrollbars="vertical"
                android:drawablePadding="8dp"
                android:hint="@string/comment"
                android:padding="8dp"
                android:textColor="@color/light_1"
                android:textColorHint="@color/light_2"
                android:backgroundTint="@color/background"
                app:backgroundTint="@color/background"
                android:textColorHighlight="@color/cardview_dark_background"/>

            <Button
                android:id="@+id/reportButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/primary"
                android:text="@string/report"
                android:textColor="@color/light_1"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>